#1797 - Fixed index item alignment

--- a/wp-content/themes/Helsingborg/scss/site/_structure.scss
+++ b/wp-content/themes/Helsingborg/scss/site/_structure.scss
@@ -364,7 +364,7 @@ img.alignright {
 		  			margin-top: rem-calc(5);
 	  			}
 
-	  			.list-content-container {
+	  			img + .list-content-container {
 	  				margin-left: 25%;
 	  				padding-left: rem-calc(20);
 	  			}
